# driftwatch

./: Cargo.toml  README.md  plan.md
driftwatch/: Cargo.toml  build.rs
driftwatch-common/: Cargo.toml
driftwatch-common/src/: lib.rs
driftwatch-ebpf/: Cargo.toml
driftwatch-ebpf/src/: main.rs
driftwatch/src/: correlate.rs  disk.rs  main.rs  output.rs  rpc.rs
xtask/: Cargo.toml
xtask/src/: main.rs
